2004-12-15 Magnus Hagdorn
 * found and fixed a bug in glimmer_thck.f90

2004-12-13 Magnus Hagdorn
 * new isostasy code (isostasy.f90, isostasy_el.f90, isostasy_setup.f90, isostasy_types.f90, kelvin.f90)
 * removed old isostasy code (glimmer_isot.f90, glide.f90, glide_setup.f90, glide_types.f90)
 * hooked up new code (glide.f90, eis_glide.f90, glint_timestep.f90, simple_glide.f90, glide_vars.def, glimmer_thck.f90)
 * simple_forcing.f90: new climate options to set amplitude of time-dep ice sheet
 * glimmer_physcon.f90: cosmetic change
 * added some docs
	
2004-12-09 Magnus Hagdorn
 * fixed bug in Makefile

2004-12-09 Magnus Hagdorn
 new netCDF I/O subsystem
 * Makfile: updated to use new files
 * glimmer_ncdf.f90, glimmer_ncio.f90, glimmer_ncparms.f90: basic netCDF I/O system handling opening and closing of
   files, I/O time, parsing of configuration. This functionality can be used in other subsystems which require netCDF
   I/O
 * ncdf_template.f90.in: template for subsystem specific I/O functions, i.e. variable definition, writing, reading
 * glide_vars.def, eis_vars.def, glint_vars.def: split up (and removed) the original ncdf_vars.def file into files
   belonging to each model subsystem
 * glide_nc_custom.f90: module for filling in dimension variables
 * glide.f90, glide_stop.f90: hooked up glide netCDF functionality
 * eis_forcing.f90, eis_glide.f90: hooked up eis netCDF functionality
 * glint_initialise.f90, glint_timestep.f90: hooked up glint netCDF functionality
 * generate_ncvars.py: updated code generator
 * updated netCDF documentation
	
2004-12-03 Magnus Hagdorn
 * glimmer_velo.f90: changed interface to slipvelo to avoid creating a temporary array
   everytime it is called.
 * glide.f90: updated how slipvelo is called
 * implemented periodic EW lateral boundary conditions (glide_setup.f90, glide_types.f90, glimmer_temp.f90, simple_forcing.f90)
 * glimmer_thck.f90: implemented periodic BC, updated slipvelo interface, avoid if clauses in loop creating