@@ -1,0 +1,4 @@
+all:	
+install:	generate_ncvars.py f90_dependencies.py
+	install -d $(GLIMMER_PREFIX)/bin
+	install $^ $(GLIMMER_PREFIX)/bin
